src/style.css
@import "./t-normalize.css";

html,
body {
    height: 100%;
}

body {
    background-color: rgb(0, 0, 39);
    font-size: 1rem;
    color: white;
}

header {
    display: flex;
    border-bottom: 1px solid white;
    height: 2.75rem;
}

.title {
    font-size: 1.5rem;
    padding: 0.25rem 0.75rem;
    margin-bottom: -1px;
}

button.project,
button#addProject {
    position: relative;
    background-color: rgb(0, 0, 39);
    font-size: 1.5rem;
    color: white;
    border: 1px solid white;
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
    padding: 0.25rem 0.75rem;
    margin-right: -1px;
    margin-bottom: -1px;
    cursor: pointer;
    z-index: 1;
}

button#addProject {
    background-color: black;
}

button.project.active {
    background-color: rgb(30, 30, 54);
    border-bottom: none;
}

#completed,
#notCompleted {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(min(500px, 100%), 1fr));
    gap: 0.5rem;
    padding: 1rem 0.5rem;
    overflow: hidden;
}

.completeTitle {
    grid-column-start: span 2;
}

#content {
    background-color: rgb(30, 30, 54);
    height: 95%;
}

/* Task element from project page */
#content > div#completed > div,
#content > div#notCompleted > div {
    display: grid;
    grid-template-columns: 0.3fr 3fr 1fr;
    grid-template-rows: 1fr 1fr;
    background-color: rgb(20, 20, 54);
    padding: 0.5rem 1rem;
    color: white;
    cursor: pointer;
}

#content > div#notCompleted > div > p,
#content > div#notCompleted > div > h2 {
    /* Prevents long desriptions from overflowing */
    overflow: hidden;
    white-space: nowrap;
}

.low {
    border-left: 3px solid rgba(0, 128, 0, 0.5);
}

.normal {
    border-left: 3px solid rgba(255, 255, 0, 0.5);
}

.high {
    border-left: 3px solid rgba(255, 0, 0, 0.5);
}

h1, h2 {
    font-size: 1.5rem;
}

h1 {
    padding: 0.5rem;
}

input[type="checkbox"] {
    grid-row-start: span 2;
    height: 1.5rem;
    align-self: center;
    margin-right: 1rem;
    cursor: pointer;
}

#task {
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 3fr;
}

#sidebar {
    display: flex;
    flex-direction: column;
    background-color: rgb(20, 20, 54);
    padding: 0.5rem;
}

#sidebar > * {
    padding: 0.5rem;
}

.inputContainer {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none; 
    background: url("img/down-arrow.svg") no-repeat;
    background-size: 1rem;
    background-position: right 0.6rem center;
}

select, 
input:not([type="checkbox"]) {
    background-color: rgb(30, 30, 54);
    color: white;
    border: 1px solid white;
    padding: 0.25rem 0.5rem;
    line-height: 1.5;
    border-radius: 1rem;
    overflow: hidden;
}

::-webkit-calendar-picker-indicator {
    filter: invert(1);
}

button.task {
    border-radius: 1rem;
    padding: 0.5rem 1rem;
    margin: 1rem 0 1rem 1rem;
    border: 1px solid white;
    background-color: rgb(30, 30, 54);
    color: white;
    font-weight: 600;

    &&:last-child {
        margin: 1rem;
    }
}

#description {
    display: flex;
    flex-direction: column;
}

textarea {
    background-color: rgb(38, 38, 58);
    border: none;
    color: white;
    resize: none;
    border-radius: 1rem;
}

textarea.desc {
    padding: 1rem;
    margin: 1rem 1rem 0 1rem;
    height: 100%;
}

textarea.title {
    padding: 0.5rem;
    margin: 0.5rem;
    field-sizing: content;
}

button > textarea {
    height: 90%;
    font-size: 1.25rem;
    padding: 0 1rem;
    white-space: nowrap;
    overflow: hidden;
}

div.descButtonContainer {
    align-self: flex-end;
}

